# backprop

./: Cwicz.hs  Macierze.hs  Main.hs  Mnist.hs  Obrazki.hs  PropagacjaWsteczna.hs  SiecNeuronowa.hs  backprop-mnist.cabal
